# ttriingtrio_controller

./: .gitignore  99-thermaltake.rules  Cargo.toml  DAEMON_MODE.md  PROJECT_SUMMARY.md  PROTOCOL.md  QUICKSTART.md  README.md  TESTING.md  install.sh  riing-config.toml  riing-trio-controller.service  test-flow.toml  test-pulse.toml  test-spectrum.toml  test-temp-reactive.toml  test-wave.toml
src/: main.rs
systemd-configs/: INSTALL.md  README.md  evening.toml  night.toml  riing-evening.service  riing-evening.timer  riing-night.service  riing-night.timer  riing-sleep.service  riing-sleep.timer  riing-trio-controller.service  riing-work.service  riing-work.timer  sleep.toml  work.toml
test-configs/: test-fans-only.toml  test-gpu-nvidia.toml  test-temp-reactive.toml
