[package]
name = "riing-trio-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
regex = "1.10"
